--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "writewise-device-auth",
-  "version": "1.3.0",
+  "version": "1.2.0",
   "description": "A tool to fetch the device's UUID",
   "main": "main.js",
   "scripts": {
@@ -46,7 +46,7 @@
           "config": {
             "name": "writewise-device-auth",
             "authors": "Writewise",
-            "iconUrl": "favicon.ico",
+            "iconUrl": "./favicon.ico",
             "exe": "writewise-device-auth.exe"
           }
         },
@@ -62,7 +62,7 @@
             "options": {
               "bin": "writewise-device-auth",
               "maintainer": "Writewise",
-              "icon": "favicon.png"
+              "icon": "./favicon.png"
             },
             "mimeType": [
               "x-scheme-handler/writewise-device-auth"
@@ -74,7 +74,7 @@
           "config": {
             "options": {
               "bin": "writewise-device-auth",
-              "icon": "favicon.png"
+              "icon": "./favicon.png"
             }
           }
         }
@@ -87,7 +87,7 @@
               "owner": "Writewise",
               "name": "writewise-device-auth"
             },
-            "authToken": "${{ secrets.GITHUB_TOKEN }}",
+            "authToken": "{ GITHUB_TOKEN }",
             "draft": true
           }
         }
