debug access token

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
               "owner": "Writewise",
               "name": "writewise-device-auth"
             },
-            "authToken": "{ GITHUB_TOKEN }",
+            "authToken": "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",
             "draft": true
           }
         }
