--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       run: npm install
     - name: publish
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: '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'
       run: npm run publish
 
   publish_on_mac:
@@ -31,7 +31,7 @@ jobs:
       run: npm install
     - name: publish
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: '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'
       run: npm run publish
       
   publish_on_win:
@@ -45,5 +45,5 @@ jobs:
       run: npm install
     - name: publish
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: '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'
       run: npm run publish
