--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron": "^18.0.3"
   },
   "dependencies": {
+    "electron-lets-move": "0.0.5",
     "electron-squirrel-startup": "^1.0.0",
     "node-machine-id": "^1.1.12"
   },
